@@ -25,7 +25,7 @@
 ///
 ///  lgp::ObjectBase is the interface class for the lgp::Object serries of classes.
 ///  
-/// File last updated 16:21 UCT on 31 March 2011
+/// File last updated 01:00 UCT on 3 April 2011
 ///
 
 
@@ -49,10 +49,22 @@ namespace lgp {
     virtual ~ObjectBase(){return;};
     
     //interface functions
+    
+    //Identification
     virtual ObjectID getId(void)=0;           ///< Return an Object's Object ID
     virtual void setId(ObjectID newId);       ///< Set an Object's Object ID
-    
-    
+
+    //Location
+    virtual long int locX(void);              ///< X Coordinate
+    virtual long int locY(void);              ///<Y Coordinate
+    virtual long int locZ(void);              ///<Z Coordinate
+    virtual void setLocX(long int x);
+    virtual void setLocY(long int y);
+    virtual void setLocZ(long int z);
+    virtual void setLoc(long int x, long int y, long int z);
+   
+   
+   
   };
   
   
